Issue 2 : Upon clicking a flyout menu, the other flyout menus should collapse, patch by codedread
git-svn-id: http://svg-edit.googlecode.com/svn/trunk@26 eee81c28-f429-11dd-99c0-75d572ba1ddd

--- a/svg-editor.css
+++ b/svg-editor.css
@@ -116,7 +116,7 @@
 	border-bottom: 1px solid #808080;
 }
 
-#tools_rect, #tools_ellipse {
+.tools_flyout {
 	position: absolute;
 	display: none;
 	height: 28px;
